[metadata]
name = basicsr
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = Basic SR (Super-Resolution) library for image deraining tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cassiopeia-yxx/PADUM
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing